implemented new protocol analysis architecture

--- a/Protocol/SuperSocket.Protocol.Net40.csproj
+++ b/Protocol/SuperSocket.Protocol.Net40.csproj
@@ -37,6 +37,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeginEndMarkReceiveFilter.cs" />
+    <Compile Include="CountSpliterReceiveFilter.cs" />
     <Compile Include="FilterState.cs" />
     <Compile Include="FixedHeaderReceiveFilter.cs" />
     <Compile Include="FixedSizeReceiveFilter.cs" />
